# TheCommunicator

./: .gitignore  CMakeLists.txt  Home.ui  main.cpp
cmake/: get_cpm.cmake
src/: main.cpp
src/backend/: messaging.cpp  messaging.h  video.cpp  video.h
src/gui/: gui.cpp  gui.h
src/network/: client.cpp  client.h
src/utils/: logger.cpp  logger.h
